Sort of working with Firebase

--- a/weather-station.html
+++ b/weather-station.html
@@ -12,15 +12,12 @@
             crossorigin="anonymous"></script>
   </head>
   <body>
-    <div id="container">
+    <div id="App">
       <p>
         If you can see this, React is <strong>not</strong> working right.
       </p>
     </div>
     <script src="./js/main.bundle.js" language="javascript">
-    </script>
-    <script>
-      renderStation("container");
     </script>
   </body>
 </html>
