--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Weather Simulation Controller</title>
     <style type="text/css">
       @import url("weather.css");
+      @import url("fonts.css");
     </style>
     <script
             src="https://code.jquery.com/jquery-3.1.1.min.js"
