Change to grid drawing.  Typescript added.
I must be crazy.  Typescript conversion.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,7 +18,8 @@
         If you can see this, React is <strong>not</strong> working right.
       </p>
     </div>
-    <script src="./main.bundle.js" language="javascript">
-    </script>
+    <script src="./vendor.js" language="javascript"></script>
+    <script src="./app.js" language="javascript"></script>
+
   </body>
 </html>
