Add leaflet maps …

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Weather Simulation</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
     <style type="text/css">
       @import url("weather.css");
       @import url("fonts.css");
