Add Rollbar support for remote debugging.
[#153650087]

https://www.pivotaltracker.com/story/show/153650087

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,6 +19,7 @@
         </div>
       </div>
     </div>
+    <script src="./rollbar-config.js" language="javascript"></script>
     <script src="./vendor.js" language="javascript"></script>
     <script src="./app.js" language="javascript"></script>
 
